# PlaudPy

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: API.md
src/plaudpy/: __init__.py  client.py  config.py  exceptions.py  utils.py
src/plaudpy/api/: __init__.py  ai.py  auth.py  base.py  config_api.py  devices.py  files.py  membership.py  misc.py  search.py  speakers.py  tags.py  templates.py  users.py
src/plaudpy/models/: __init__.py  ai.py  auth.py  device.py  file.py  membership.py  search.py  speaker.py  template.py  transcript.py  user.py
tests/: __init__.py  conftest.py  test_api_ai.py  test_api_auth.py  test_api_config.py  test_api_devices.py  test_api_files.py  test_api_membership.py  test_api_misc.py  test_api_search.py  test_api_speakers.py  test_api_tags.py  test_api_templates.py  test_api_users.py  test_client.py  test_functional.py  test_models.py  test_models_new.py
